--- a/src/medis/Adminlogin_page.form
+++ b/src/medis/Adminlogin_page.form
@@ -482,9 +482,9 @@
                               <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="docDetailsLabel" min="-2" max="-2" attributes="0"/>
-                                  <Component id="docDetailsScrollPane" min="-2" pref="480" max="-2" attributes="0"/>
+                                  <Component id="docDetailsScrollPane" min="-2" pref="546" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="151" max="32767" attributes="0"/>
+                              <EmptySpace pref="85" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -818,7 +818,7 @@
                                                   <Component id="docDesignation" min="-2" pref="111" max="-2" attributes="0"/>
                                                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                                                       <Component id="MaleDoc" alignment="0" max="32767" attributes="0"/>
-                                                      <Component id="FemaleDoc" alignment="0" pref="73" max="32767" attributes="0"/>
+                                                      <Component id="FemaleDoc" alignment="0" max="32767" attributes="0"/>
                                                   </Group>
                                               </Group>
                                           </Group>
